# DataBaseUI

./: .gitignore  README.md  package-lock.json  package.json  tsc_output.txt  vite.config.ts
.github/workflows/: release.yml
src/: App.test.tsx  App.tsx  REFACTOR_PLAN.md  types.ts
src-tauri/: Cargo.toml  refactor_rust_plan.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/commands/: connection.rs  credential.rs  crud.rs  db_ops.rs  filter.rs  mod.rs  saved.rs  session.rs  sidebar.rs  tag.rs  window.rs
src/api/: commands.ts
src/assets/: icons.tsx
src/components/: ChangelogSidebar.tsx  ConfirmModal.tsx  ConnectionForm.tsx  DataGrid.tsx  DuplicateTableModal.tsx  FullscreenLoader.tsx  InsertRowPanel.tsx  MainInterface.tsx  Navbar.tsx  PreferencesModal.tsx  QueryEditor.tsx  SaveQueryModal.tsx  SchemaVisualizer.tsx  Sidebar.tsx  TableCreator.tsx  TagManager.tsx  Toast.tsx  WelcomeScreen.tsx  WindowControls.tsx
src/helpers/: dataHandlers.ts  screenshotHelper.ts
src/hooks/: index.ts  useAppNavigation.ts  useAppSystem.ts  useChangeManager.ts  useDataMutation.ts  useDatabaseRegistry.ts  usePersistenceActions.ts  useResultsPane.ts  useSavedItems.ts  useSchemaOperations.ts  useSession.ts  useSystemLogs.ts  useTableActions.ts  useTableData.ts  useTableOperations.ts  useTabs.ts
src/styles/: ConnectionForm.module.css  DataGrid.module.css  Form.module.css  MainLayout.module.css  TableCreator.module.css  Welcome.module.css  global.css  vars.css  (+1 more)
(+109 files in other folders)
